Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,20 @@
 
-html {
-    background: url('images/pink-tulips-on-wood-texture_4460x4460.jpg');
+body {
+    background: url('images/pink-tulips-on-wood-texture_4460x4460.jpg') no-repeat;
     /* -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover; 
-    background-clip: content-box; */
+    background-clip: content-box;
     width : auto;
+    width: 100%;
+    height: 100%;
+    height: auto; */
+
+    width: 100%;
     height: auto;
+     overflow: hidden;
+
 }
 
 
